<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <TextView
        android:id="@+id/origin_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/origin"
        android:textSize="15dp" >
    </TextView>

    <Spinner
        android:id="@+id/origin_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/origin_label" />

    <TextView
        android:id="@+id/destination_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/origin_spinner"
        android:layout_below="@+id/origin_spinner"
        android:text="@string/destination"
        android:textSize="15dp" >
    </TextView>

    <Spinner
        android:id="@+id/destination_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/destination_label" />

    <CheckBox
        android:id="@+id/return_checkbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/destination_spinner"
        android:text="@string/also_add_return_route"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/buttonBar"
        style="@style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/return_checkbox"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/okButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok" >
        </Button>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

</RelativeLayout>